--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Example
 <!DOCTYPE html>
 <html>
 <head>
@@ -8,10 +7,10 @@ Example
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="img-hello-world.webp" alt="Hello World from Space"
-style="width:100%;max-width:960px"></div>
+<div><img src="img-hello-world.webp" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<div><img src="img-hello-git.jpeg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
